[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
proc-macro2 = { version = "=1.0.91", default-features = false, features = ["span-locations"], package = "proc-macro2" }